# pemmican

./: .gitignore  .readthedocs.yaml  LICENSE.txt  Makefile  README.rst  setup.cfg  tox.ini
.github/workflows/: test.yml
docs/: Makefile  api.rst  api_cli.rst  api_gui.rst  api_power.rst  changelog.rst  conf.py  development.rst  index.rst  install.rst  license.rst  pemmican-cli.rst  pemmican-mon.rst  pemmican-reset.rst  pemmican_mon.rst  pemmican_reset.rst  subst.rst  tutorial.rst
pemmican/: cli.py  const.py  gui.py  lang.py  notify.py  power.py
po/: en_GB.po  pemmican.pot
scripts/: copyrights
systemd/: pemmican-monitor.service  pemmican-reset.service
tests/: conftest.py  test_cli.py  test_monitor_gui.py  test_notify.py  test_power.py  test_reset_gui.py
