# coding: utf-8
[metadata]
name = pemmican
version = 0.1
description = Notify users of Raspberry Pi 5 power issues
long_description = file: README.rst
author = Dave Jones
author_email = dave.jones@canonical.com
project_urls =
    Documentation = https://pemmican.readthedocs.io/
    Source Code = https://github.com/waveform80/pemmican
    Issue Tracker = https://github.com/waveform80/pemmican/issues
keywords = raspberry pi pmic notify
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Boot

[options]
packages = find:
python_requires = >=3.9
install_requires =
    setuptools

[options.extras_require]
gui =
    pyudev
    dbus-python
test =
    pytest
    pytest-cov
doc =
    sphinx
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    pemmican-reset = pemmican.gui:reset_main
    pemmican-mon = pemmican.gui:monitor_main
    pemmican-cli = pemmican.cli:main

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = pemmican
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    raise NotImplementedError
    assert False

[copyrights:settings]
include =
    **/*.py
    **/*.rst
exclude =
    docs/examples/*.py
    docs/license.rst
license = LICENSE.txt
preamble =
    pemmican: notifies users of Raspberry Pi 5 power issues
strip-preamble = false

[previewer:settings]
command = make -C docs html
html = build/html
watch =
    pemmican/*.py
    docs/*.rst
    README.rst
